fix: UUID로 공지방 입장하도록 수정
