# swagger/room.swagger.yaml
@@ -566,7 +566,7 @@ paths:
                         type: string
                         description: 제출 상태 (퀴즈의 경우 정답 여부에 따라 COMPLETE / NOT_COMPLETE, 미션의 경우 PENDING)
 
-  /room/enter/{roomId}:
+  /room/enter/{uuid}:
     get:
       tags:
         - room
@@ -578,10 +578,10 @@ paths:
       security:
         - bearerAuth: []
       parameters:
-        - name: roomId
+        - name: uuid
           in: path
           schema:
-            type: number
+            type: string
           required: true
       responses:
         "200":
@@ -606,15 +606,20 @@ paths:
                         isAlreadyJoinedRoom:
                           type: boolean
                           description: 해당 공지방에 이미 입장되어있는지 여부
-                        room_name:
+                        roomId:
+                          type: number
+                          description: 해당 공지방 ID
+                        roomName:
                           type: string
                           description: 해당 공지방 이름
-                        room_image:
+                        roomImage:
                           type: string
                           description: 해당 공지방 이미지 URL
-                        admin_nickname:
+                        adminNickname:
                           type: string
                           description: 해당 공지방 관리자 닉네임
+                          
+  /room/enter/{roomId}:
     post:
       tags:
         - room
